--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for BSON-XS
 
 {{$NEXT}}
 
+    [Fixes]
+
+    - More portability fixes for older Perls
+
 v0.2.1    2016-10-27 10:26:55-04:00 America/New_York
 
     [Fixes]
