--- a/Changes
+++ b/Changes
@@ -4,7 +4,9 @@ Revision history for BSON-XS
 
     [Fixes]
 
-    - More portability fixes for older Perls
+    - Add missing dynamic configuration step to Makefile.PL
+
+    - Add more portability fixes for older Perls
 
 v0.2.1    2016-10-27 10:26:55-04:00 America/New_York
 
