--- a/Changes
+++ b/Changes
@@ -2,6 +2,13 @@ Revision history for BSON-XS
 
 {{$NEXT}}
 
+    [Bug fixes]
+
+    - PERL-931 Fix memory leaks and early free
+
+    - PERL-932 Fix possible stack corruption in BSON::Doc encoding
+      on Perls <= 5.24
+
 v0.4.1    2018-05-25 13:19:41-04:00 America/New_York
 
     [Bug fixes]
