--- a/Changes
+++ b/Changes
@@ -9,6 +9,10 @@ Revision history for BSON-XS
     - PERL-932 Fix possible stack corruption in BSON::Doc encoding
       on Perls <= 5.24
 
+    [Prereqs]
+
+    - Bumped BSON.pm prereq to v1.6.3
+
 v0.4.1    2018-05-25 13:19:41-04:00 America/New_York
 
     [Bug fixes]
