--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for BSON-XS
 
 {{$NEXT}}
 
+    [~ Internal Changes ~]
+
+    - Removed unused monotonic time function that was causing
+      link errors on Windows XP
+
 v0.4.2    2018-06-13 10:01:13-04:00 America/New_York
 
     [Bug fixes]
