--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for BSON-XS
 
 {{$NEXT}}
 
+    [Added]
+
+    - Added support for BSON::Array from BSON v1.12.0.
+
 v0.6.0    2018-11-29 17:08:47-05:00 America/New_York
 
     [Changed]
