--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for BSON-XS
 
 {{$NEXT}}
 
+    [Fixed]
+
+    - PERL-1130 Fixed memory leaks in circular reference detection
+      and bad UTF-8 detections.
+
 v0.8.2    2019-12-05 13:57:34-05:00 America/New_York
 
     [Fixed]
