--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for BSON-XS
 
 {{$NEXT}}
 
+  [!!! END OF LIFE NOTICE !!!]
+
+  - As of August 13, 2020, the BSON-XS library has reached end of life
+    and is no longer supported by MongoDB.
+
 v0.8.3    2020-04-13 10:56:53-04:00 America/New_York
 
     [Fixed]
